src/objects/LicenseLookup__mdt.object
<CustomObject>
    <description>To get Board Name ,Licensetypes and other Fields for License Lookup on Portal</description>
    <fields>
        <fullName>Boardname__c</fullName>
        <description>Board Name in E license Release 5.0</description>
        <label>Boardname</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherFeilds__c</fullName>
        <description>Other Columns</description>
        <label>OtherFeilds</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>license_type__c</fullName>
        <description>License Type</description>
        <label>License Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LicenseLookup</label>
    <pluralLabel>LicenseLookups</pluralLabel>
</CustomObject>